--- a/styles/design.css
+++ b/styles/design.css
@@ -1,22 +1,37 @@
 /* top banner related styles */
 
 .section{
-    background-image: url("../images/banner_image.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    border-radius: 16px;
-    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    height: 100%;
+    width: 100%;
+}
+
+.banner {
+    width: 1320px;
+    margin: 15px auto;
+}
+
+.banner img{
+  background-repeat: no-repeat;
+  border-radius: 16px;
+  background-size: cover;
 }
 
 .banner-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin-top: 15px;
-    
+        justify-content: center;
+        display: block;
+        padding-top: 155px;
+        padding-bottom: 0px;
+        align-items: center;
+        text-align: center;
+        margin-top: 15px;
+        position: absolute;
+        top: 60%;
+        left: 40%;
+        width: 100%;
+        height: 75%;
+        margin-left: -37.5%;
+        margin-top: -37.5%;
+        background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0) 100%); 
 }
 
 .banner-greet {
@@ -63,6 +78,7 @@
 
 .midnight-section {
     background-image: url("../images/Vectorrr.png");
+    background-size: auto;
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
@@ -74,6 +90,10 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    top: 60%;
+    left: 40%;
+    margin-top: 30px;
+    width: 100%;
 }
 
 .midnight {
@@ -109,13 +129,19 @@
     font-size: 20px;
     text-transform: uppercase;
 }
+ 
 
+/* text part styles */
 .text {
-    padding: 130px;
-    border-radius: 10px;
-    background: #FFF8F3;
-    margin: 130px;
-    fill: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    width: 1320px;
+    height: 500px;
+    display: block;
+    margin: 50px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 16px;
+    background: linear-gradient(120deg, rgba(255, 0, 0, 0.1) 60%, rgba(214, 131, 131, 0) 80%);
 }
 
 .red-text {
@@ -137,3 +163,374 @@
     font-weight: 700;
     padding: 15px 35px;
 }
+
+/* coming soon styles */
+
+.coming {
+    width: 1320px;
+    height: 600px;
+    display: block;
+    margin: 10px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.05);
+      box-shadow: 0 4px 20px rgba(61, 159, 255, 0.2);
+    border-radius: 16px 16px 16px 16px;
+  }
+  .coming-soon{
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .coming-text h3{
+    color: #F00;
+    text-align: left;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    padding-bottom: 15px;
+  }
+  .coming-text h1{
+    color: #070211;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    padding-bottom: 15px;
+  }
+  .coming-text p{
+    width: 80%;
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px;
+    padding-bottom: 15px;
+  }
+  
+  .coming-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .coming-image img {
+    width: 100%;
+    border: 8px solid #F00;
+    border-radius: 50%;
+    padding: 20px;
+    margin-right: 10px;
+  }
+  .coming-text-image{
+    text-align: center;
+    padding-left: 30px;
+  }
+  .coming-text-image h1{
+    color: #F00;
+    font-size: 44px;
+    padding-bottom: 15px;
+  }
+  .coming-text-image p{
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 32px;
+    padding-bottom: 15px;
+  }
+  .coming-text-image img{
+    width: 50%;
+  }
+
+  /* holiday section styles */
+
+  .holiday{
+    width: 1320px;
+    height: 200px;
+    display: block;
+    margin: 10px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 50px;
+    background-color: #ffffff;
+    
+  
+  }
+  
+  .holiday-content{
+    text-align: center;
+    color: black;
+    display: block;
+    align-items: center;
+    position: relative;
+    padding-top: 100px;
+    
+  }
+  .holiday-content h1 span{
+  
+    color: #F00;
+    text-align: center;
+    font-family: 'Merriweather', serif;
+    font-size: 72px;
+    font-weight: 900;
+    
+    
+  }
+  .holiday-content h1{
+    color: #070211;
+    font-family: 'Merriweather', serif;
+    font-size: 72px;
+    font-weight: 900;
+    
+    
+  }
+  .holiday-content h4{
+    color: #070211;
+    font-size: 24px;
+    font-weight: 500;
+    
+    
+  }
+  .holiday-content p{
+    color: rgba(7, 2, 17, 0.60);
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px;
+    
+  }
+  
+  .holiday-image {
+    width: 1320px;
+    height: 600px;
+    margin: 10px auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.05);
+    box-shadow: 0 4px 20px rgba(61, 159, 255, 0.2);
+    background-image: url("../images/rectangle2.png");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: contain;
+    border-radius: 16px;
+    overflow: hidden;
+  }
+  
+  .image-content {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: 30px;
+  }
+  
+  .image-content img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .second-image img {
+    width: 80%;
+    height: auto;
+    margin-left: 200px;
+  }
+  
+  .third-image img {
+    width: 100%;
+    height: 100%;
+  }
+  
+
+  /* portfolio section styles */
+
+  .portfolio-content {
+    width: 100%; 
+    max-width: 1500px;
+    margin: 0 auto;
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center;
+    text-align: center; 
+  }
+  
+  .portfolio-content h1 {
+    color: #070211;
+    font-family: 'Merriweather', serif;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+  }
+  
+  .portfolio-content h4 {
+    color: #f00;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: normal;
+    margin-bottom: 20px;
+  }
+  
+  .grid-container {
+    width: 100%;
+    max-width: 1500px;
+    margin: 0 auto;
+  }
+  
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 10px;
+    margin-top: 20px; 
+  }
+  
+  .grid img {
+    border: 2px solid black;
+    border-radius: 16px;
+    width: calc(25% - 20px);
+    margin: 10px;
+    transition: border-color 0.3s, box-shadow 0.3s;
+  }
+  
+  .grid img:hover {
+    border: 2px solid rgb(146, 0, 0);
+    box-shadow: 0 0 10px rgba(146, 0, 0, 0.5);
+  }
+  
+  
+  /* newsletter styles */
+
+  #newsletter {
+    background-color: #f5f5f5;
+    padding: 50px 0;
+  }
+  
+  .newsletter-container {
+    max-width: 800px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .newsletter-icon a {
+    text-decoration: none;
+    color: #333;
+    font-size: 24px;
+  }
+  
+  .newsletter-content {
+    flex-grow: 1;
+    margin-left: 20px;
+  }
+  
+  .newsletter-title {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .newsletter-copy {
+    color: #555;
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+  
+  .newsletter-form {
+    display: flex;
+  }
+  
+  .newsletter-email {
+    padding: 10px;
+    width: 70%;
+    border: 1px solid #ccc;
+    border-radius: 5px 0 0 5px;
+  }
+  
+  .newsletter-button {
+    padding: 10px 20px;
+    background-color: #f00;
+    color: #fff;
+    border: none;
+    border-radius: 0 5px 5px 0;
+    cursor: pointer;
+  }
+  
+  .newsletter-button:hover {
+    background-color: #c00;
+  }
+
+  
+  /* footer styles */
+
+  footer {
+    background-color: #333;
+    color: #fff;
+    padding: 30px 0;
+  }
+  
+  .footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .footer-text,
+  .social-icons,
+  .footer-bottom {
+    flex: 1;
+    margin-bottom: 20px;
+  }
+  
+  .fo-address p {
+    margin: 0;
+  }
+  
+  .fo-contact,
+  .socials {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .fo-contact li,
+  .socials li {
+    margin-bottom: 10px;
+  }
+  
+  .fo-contact a,
+  .socials a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .fo-contact a:hover,
+  .socials a:hover {
+    text-decoration: underline;
+  }
+  
+  .copy-text {
+    margin: 0;
+  }
+  
+  .btn-unsubscribe {
+    padding: 10px 20px;
+    background-color: #f00;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .btn-unsubscribe:hover {
+    background-color: #c00;
+  }
+  
